tests/errors/ForUpAssignIter.imp
VAR
  a
BEGIN
  FOR i FROM 1 TO 10 DO
    a := 5;
    i := i + 1;
  ENDFOR
  WRITE a;
END
